--- a/CodeBase/styles.css
+++ b/CodeBase/styles.css
@@ -146,9 +146,20 @@ h2{
 #footer{
   text-align: center;
   padding: 7%;
-  padding-bottom: 5%;
+ padding-bottom: 3%;
 }
-.fab{
-  padding: 3%;
-  margin: 5px;
+a{
+  color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+a:hover{
+  color: grey;
+}
+.footer-button{
+  border-radius: 10%;
+  margin: 0 6px;
+  border: none;
+  padding: 7px;
+  background-color: black;
+  color: white;
 }
