--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -208,7 +208,7 @@ h2{
   transition: bottom 0.2s linear 0.4s;
 }
  .pricing-container .pricing-table:hover .pricing-inner {
-  background: #ecaaaa;
+  background: #e778ac;
   color: #000;
 }
  .pricing-container .pricing-table:hover .tb-border:before {
@@ -233,7 +233,7 @@ h2{
   opacity: 1;
 }
  .pricing-container .pricing-inner {
-  background: #f1c4c4;
+  background: #ff8fa2;
   text-align: center;
   color: #fff;
   -webkit-transition: background 0.4s ease-in, color 0.4s ease-in;
@@ -245,12 +245,13 @@ h2{
 }
  .pricing-container .pricing-inner .plan-price-container {
   overflow: hidden;
-  background-color:blue;
+  background-color:rgb(195, 0, 255);
  }
  .pricing-container .pricing-inner .plan-price {
   font-size: 46px;
   margin: 0;
   font-weight: 800;
+  color:white;
 }
  .pricing-container .pricing-inner .plan-desc {
   font-size: 22px;
@@ -258,14 +259,17 @@ h2{
   padding: 0 20px 25px;
   color:rgb(170, 0, 0);
 }
+.pricing-icons{
+  color:rgb(30, 0, 65);
+}
  .pricing-container .pricing-inner button {
-  font-size: 13px;
-  border-radius: 0;
+  font-size: 23px;
+  border-radius: 20%;
   border: none;
   padding: 15px 15px;
   margin: 0 15px 25px;
-  background: #e68d8d;
-  color: white;
+  background: #ffffff;
+  color: rgb(15, 15, 15);
   opacity: 0;
   -webkit-transform: translate3d(0, -15px, 0);
   transform: translate3d(0, -15px, 0);
@@ -306,8 +310,12 @@ h2{
     transform: translate3d(0, 0, 0);
  }
 }
-@media screen and (max-witdth:900px){
+@media only screen and (max-width:900px){
   .pricing-container{
-  flex-direction: column;
+      flex-direction: column;
+  }
+  .pricing-table{
+    width:80%;
+    margin-bottom:2rem;
   }
 }
