Updated README and cleaned code

--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -22,10 +22,10 @@ h1{
 body{
    font-family: 'Montserrat', sans-serif;
 }
-.navbar{
+/* .navbar{
   
 
-}
+} */
 .navbar-brand{
   font-family: "Ubuntu";
   font-size: 2.5rem;
