--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -159,8 +159,9 @@ h2{
   margin: 30px auto;
   width: 300px;
   height: 300px;
-  background-color: #e288f9;
-background-image: linear-gradient(315deg, #e288f9 0%, #ffc988 74%);
+  background-color: #fc5296;
+background-image: linear-gradient(315deg, #fc5296 0%, #f67062 74%); 
+
   border-radius: 40px;
 box-shadow:  -4px -4px 20px 5px rgba(0,0,0,0.18);
   cursor: pointer;
