--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -184,10 +184,11 @@ box-shadow:  -4px -4px 20px 5px rgba(0,0,0,0.18);
 .cardd .cardd_title {
   text-align: center;
   border-radius: 0px 0px 40px 40px;
-  font-family: sans-serif;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-weight: bold;
-  font-size: 30px;
-  margin-top: -80px;
+  font-size: 40px;
+  margin-top: -90px;
+  
   height: 40px;
 }
 
