--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -293,6 +293,16 @@ h2 {
  }
 } 
 */
+@media only screen and (max-width: 900px) {
+  .pricing-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .pricing-table {
+    width: 80%;
+    margin-bottom: 2rem;
+  }
+}
 @media only screen and (max-width: 800px) {
   .pricing-container {
     flex-direction: column;
