--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -293,7 +293,7 @@ h2 {
  }
 } 
 */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 900px) and (min-width: 800px) {
   .pricing-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -303,9 +303,10 @@ h2 {
     margin-bottom: 2rem;
   }
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 800px) and (min-width: 600px) {
   .pricing-container {
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
   }
   .pricing-table {
     width: 80%;
