--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -127,6 +127,7 @@ h2 {
 }
 .pricing-container {
   display: flex;
+  flex-wrap: wrap;
   align-items: stretch;
 }
 .pricing-table {
@@ -293,7 +294,7 @@ h2 {
  }
 } 
 */
-@media only screen and (max-width: 900px) and (min-width: 800px) {
+@media only screen and (max-width: 900px) and (min-width: 700px) {
   .pricing-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -303,7 +304,7 @@ h2 {
     margin-bottom: 2rem;
   }
 }
-@media only screen and (max-width: 800px) and (min-width: 600px) {
+@media only screen and (max-width: 700px) and (min-width: 200px) {
   .pricing-container {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
