Footer has been modified.

--- a/CodeBase/css/styles.css
+++ b/CodeBase/css/styles.css
@@ -21,6 +21,7 @@ h1{
 
 body{
    font-family: 'Montserrat', sans-serif;
+   height: 520px;
 }
 /* .navbar{
   
@@ -237,3 +238,66 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   transition: 0.4s;
 }
 */
+
+.social {
+  margin: 20px;
+  /*margin-top: 40px;*/
+  text-align: center;
+  transform: translateY(-50%);
+}
+
+.social .link {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 2px dashed black;
+  background-clip: content-box;
+  padding: 10px;
+  transition: .5s;
+  color: #D7D0BE;
+  margin-left: 15px;
+  margin-right: 15px;
+  font-size: 70px;
+}
+
+.social .link span {
+  display: block;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.social .link:hover {
+  padding: 20px;
+  color: black;
+  margin-left: -5px;
+  transform: translateX(10px) rotate(360deg);
+}
+
+.social .link.github {
+  background-color: tomato;
+  color: black;
+}
+
+.social .link.twitter {
+  background-color: #00ACEE;
+  color: black;
+}
+
+.social .link.linkedin {
+  background-color: #3B5998;
+  color: black;
+}
+
+.social .link.email {
+  background-color: #34A853;
+  color: black;
+}
+
+
+
